# sache

./: .gitignore  README.md  Untitled-1.json  commit.sh  ec2requirements.txt  example.credentials.json  geom_median.pt  gpt4_evaluations.json  pad.py  pyproject.toml  requirements.txt  saevit.md  todo  todo.txt
sache/: __init__.py  actplots.ipynb  analysis.ipynb  btk.py  cache.py  constants.py  generate_tok_dict.ipynb  generator.py  hookedvit.py  imgloader.py  kernel.py  log.py  main.py  model.py  shuffler.py  test_cache.py  test_generate.py  test_log.py  test_model.py  test_shuffler.py  test_train.py  tok.py  tokanal.ipynb  tokenc.ipynb  train.py  trainer.py
sache/normalize/merciless-citadel/: mean.pt  std.pt
scripts/: activation_correlation.py  analysis.ipynb  batchmm.py  battery.py  bm25.ipynb  bm25.py  build_configs.py  calculate_mean_std.py  calculate_switch_complexity.py  centercrop.ipynb  download.py  download_logs.py  generate.py  generate_tok_dict.ipynb  geom_median.py  interrater.ipynb  io_bytestensor.py  killmultiproc.py  laion.py  latent_acts.py  memory-sharing.py  multilayer.sh  profile_bytes_v_normal.py  profile_cache.py  profile_mm.ipynb  profile_raw_s3.py  profile_s3.py  profile_s3memshare.py  profile_s5cmd.py  profile_switch.ipynb  profile_switch.py  profile_throughput.py  pull.py  scripts.sh  sorteval.py  sqs_battery.py  switchvitplot.ipynb  t.py  testbeir.py  tokencount.py  (+6 more)
scripts/submission/: activations.ipynb  allenc.py  corr_plot.ipynb  tokplot.ipynb  toyunigrams.ipynb
terraform/environments/production/: main.tf  terraform.tfstate  terraform.tfstate.backup
terraform/main/: server.tf  trainserver.tf  variables.tf
