[tool.poetry]
name = "sache"
version = "0.1.31"
description = ""
authors = ["Louka Ewington-Pitsos <lewingtonpitsos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "0.33.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
anyio = "4.4.0"
appnope = "0.1.4"
asttokens = "2.4.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
babe = "0.0.7"
beartype = "0.14.1"
better-abc = "0.0.3"
blobfile = "2.1.1"
boostedblob = "0.15.4"
boto3 = "1.34.149"
botocore = "1.34.149"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
comm = "0.2.2"
config2py = "0.1.34"
contourpy = "1.2.1"
cycler = "0.12.1"
datasets = "2.20.0"
decorator = "5.1.1"
dill = "0.3.8"
dol = "0.2.51"
einops = "0.8.0"
exceptiongroup = "1.2.2"
executing = "2.0.1"
fancy-einsum = "0.0.3"
filelock = "3.15.4"
fire = "*"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.5.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
gprof2dot = "2024.6.6"
graze = "0.1.17"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
huggingface-hub = "0.24.2"
i2 = "0.1.17"
idna = "3.7"
importlib-resources = "6.4.0"
iniconfig = "2.0.0"
jaxtyping = "0.2.33"
jinja2 = "3.1.4"
jmespath = "1.0.1"
joblib = "1.4.2"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
kiwisolver = "1.4.5"
lxml = "4.9.4"
markupsafe = "2.1.5"
matplotlib = "*"
matplotlib-inline = "*"
mdurl = "0.1.2"
mpmath = "1.3.0"
multidict = "6.0.5"
multiprocess = "0.70.16"
networkx = "3.3"
nltk = "3.8.1"
numpy = "1.26.4"
orjson = "3.10.6"
packaging = "24.1"
pandas = "2.2.2"
parso = "0.8.4"
patsy = "0.5.6"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.2.2"
plotly = "5.23.0"
plotly-express = "0.4.1"
pluggy = "1.5.0"
prompt-toolkit = "3.0.47"
protobuf = "*"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
py2store = "0.1.20"
pyarrow = "*"
pyarrow-hotfix = "0.6"
pycryptodomex = "3.20.0"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.1"
pyzmq = "26.0.0"
randomname = "0.2.1"
regex = "2024.7.24"
requests = "2.32.3"
rich = "13.7.1"
s3transfer = "0.10.2"
safetensors = "0.4.3"
scipy = "1.14.0"
sentencepiece = "0.2.0"
sentry-sdk = "2.11.0"
setproctitle = "1.3.3"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
stack-data = "0.6.3"
statsmodels = "0.14.2"
sympy = "1.13.1"
tenacity = "8.5.0"
termcolor = "2.4.0"
threadpoolctl = "3.5.0"
tiktoken = "0.6.0"
tokenizers = "0.19.1"
tomli = "2.0.1"
torch = "^2.4.1"
tornado = "6.4.1"
tqdm = "4.66.4"
traitlets = "5.14.3"
transformer-lens = "2.2.2"
transformers = "4.43.2"
typeguard = "2.13.3"
typer = "0.12.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
uvloop = "0.19.0"
wandb = "*"
wcwidth = "0.2.13"
xxhash = "3.4.1"
yarl = "1.9.4"
zstandard = "0.22.0"
pyspark = "^3.5.3"
torchvision = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "8.3.1"
pytest-profiling = "1.7.0"
ipykernel = "6.29.5"
debugpy = "1.8.2"
ipython = "8.26.0"
jedi = "0.19.1"


[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.23.4"
moto = "^5.0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
exclude = [
    "cruft/**",
    "laion/**",
    "scripts/**",
    "terraform/**",
]